# hse-naom-s-2025

./: .clang-format  .clang_format  .gitignore  .gitmodules  CMakeLists.txt  CmakeList.txt  LICENSE  setup.cfg
lab01/: .gitignore  Makefile  README.md  auxiliary_funcs.hpp  main  main.cpp
lab01/include/: SLAE.h  SLAE.hpp  auxiliary_functions.h  auxiliary_functions.hpp  gaussian_elimination.h  option_environment.h  solver.h
lab01/include/extra_classes/: BlindObserver.hpp  ImplicitStepper.hpp
lab01/include/lse_solvers/: gaussian_elimination_pivoting.h  gsl_solver.h  iterative_solver.h  openblas_solver.h  solve_lse.h
lab01/include/lsu_solvers/: gaussian_elimination_pivoting.h  gsl_solver.h  interactive_solver.h  iterative_solver.h  openblas_solver.h  solve_lsu.h
lab01/include/matrix_work/: matrix.h  sparse_matrix.h  vector.h
lab01/tests/: test_gaussian_elimination.cpp  test_lse_solvers.cpp  test_openblas.cpp  visualization.ipynb
lab01/tests/include/: memory_management.h  random_management.h
lab02/: README.md  TimeConverters.cpp
lab03/: .gitignore  MomentumStrategy.ipynb  README.md
lab03/cpp/: MS.hpp  parse_data.hpp  tune_params.cpp
lab03/data/: README.md  create_train.py  info.txt
lab03/py/: MS.py  README.md  parameter_tuning.py  preprocess_data.ipynb  tune_params.py
lab04/: test.cpp
lab04/include/: GMPwrapper.hpp  buchberger.h  groebner_basis.h  monomial.h  polynomial.h
previous_labs/intergartor/: BasicTimeStepper.hpp  Interator.hpp  Observer.hpp  RHS.hpp
